modify partition